--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,44 @@
 <resources>
     <string name="app_name">Kalendarz Dni Nietypowych</string>
+    <string name="title_activity_countries">CountriesActivity</string>
+
+    <string-array name="countries">
+        <item>Great Britain</item>
+        <item>USA</item>
+        <item>Poland</item>
+        <item>Germany</item>
+        <item>Italy</item>
+        <item>Spain</item>
+        <item>France</item>
+    </string-array>
+    <string-array name="activities">
+        <item>Football</item>
+        <item>Volleyball</item>
+        <item>Golf</item>
+        <item>Martial Arts</item>
+        <item>Running</item>
+        <item>Swimming</item>
+        <item>Gym</item>
+        <item>Basketball</item>
+        <item>None</item>
+    </string-array>
+    <string-array name="hobbys">
+        <item>Dancing</item>
+        <item>Singing</item>
+        <item>Video games</item>
+        <item>Fishing</item>
+        <item>History</item>
+        <item>Art</item>
+    </string-array>
+    <string name="title_activity_side_menu">SideMenuActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
 </resources>
