--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Kalendarz Dni Nietypowych</string>
     <string name="title_activity_countries">CountriesActivity</string>
-
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
     <string-array name="countries">
         <item>Afghanistan</item>
         <item>Albania</item>
