--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -231,4 +231,5 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_add_holiday">AddHolidayActivity</string>
+    <string name="title_activity_edit_holiday">EditHolidayActivity</string>
 </resources>
